<resources>
    <string name="app_name">First app</string>
    <string name="Welcome">Sample App </string>
    <string name="use">Sign in</string>
    <string name="Terms">I accept that this is a sample app which contains the implementation of different concepts.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="registernew">Register</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="greetings">Welcome User</string>
    <string name="admin">Admin</string>
    <string name="name">Name</string>
    <string name="hi_there">Hi there, Good to see you back!</string>
    <string name="meeting">Click on the below menu to navigate to the respective pages.</string>
    <string name="home">Home</string>
    <string name="Grid_view">Grid View</string>
    <string name="grid_view_example">Grid View Example</string>
    <string name="list_view">List View</string>
    <string name="go_back">Go back</string>
    <string name="Explore">Explore</string>
    <string name="Recycle">Recycler View</string>
    <string name="menu_welcome">Welcome to menu page, Go through the options available and make a choice </string>
    <string name="feed_back">Feedback</string>
    <string name="about_us">About Us</string>
    <string name="help">Help</string>
    <string name="others">Others</string>
    <string name="lifecycle">Welcome to help section here you can view the Lifecycle of the activity</string>
    <string name="your_title">Your Title</string>
    <string name="icon">Icon</string>
    <string name="feed_welcome">Submit your feedback</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rate_us">Rate us</string>
    <string name="get_rating">Get Rating</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="enter_your_feedback_here">Enter your feedback here</string>
    <string name="feedbacks_submitted">Feedbacks Submitted</string>
    <string name="feedbacks">Feedbacks</string>
    <string name="view_feedbacks">View Feedbacks</string>
    <string name="broadcast">click to start broadcast</string>
    <string name="broadcast_title">Broadcast</string>
    <string name="services">Services</string>
    <string name="start_services">Start Services</string>
    <string name="example_of_services">Example of services</string>
    <string name="stop_services">Stop Services</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="view_details">View details</string>
    <string name="view_storage">View Storage</string>
    <string name="enter_mobile_no">Enter Mobile no</string>
    <string name="phone_number">Phone number</string>
    <string name="load">Load data</string>
    <string name="shared_preference_example">Shared Preference Example</string>
    <string name="shp_details">In this example, user\'s name and mobile number are saved using key value pair inside the data folder and when you click view details, the stored data are fetched in a replaced fragment layout.</string>
    <string name="gmail_button">gmail button</string>
    <string name="twitter_button">twitter button</string>
    <string name="facebook_button">facebook button</string>
    <string name="external_storage">External Storage Example</string>
    <string name="internal_storage">In this example, user\'s name and mobile number are saved in a file inside the data folder and when you click view details, the stored data are fetched in a replaced fragment layout.</string>
    <string name="shared_preference">shared preference</string>
    <string name="int_storage">internal storage</string>
    <string name="ext_storage">external storage</string>
    <string name="click_for_pop_up_menu">Click for pop-up menu</string>
    <string name="role">Role</string>
    <string name="no_data_available">No data available</string>
    <string name="no_number_available">No number available</string>
    <string name="enter_data_you_want_to_save">Enter data you want to save</string>
    <string name="internal_cache">Internal Cache</string>
    <string name="external_cache">External Cache</string>
    <string name="external_public">External Public</string>
    <string name="external_private">External Private</string>
    <string name="click_buttons_for_data">Click the buttons to load the data present there</string>
    <string name="weather_api">Weather Api</string>
    <string name="map_api">Map Api</string>
    <string name="view_api">Api &amp; others</string>
    <string name="api_process">api_process</string>
    <string name="image">image</string>
    <string name="view_jokes">Jokes</string>
    <string name="jokes">Jokes :</string>
    <string name="get_joke">Get Joke</string>
    <string name="threads">Threads</string>
    <string name="Get_api_link">https://api.chucknorris.io/</string>
    <string name="failed_to_fetch_joke">Failed to fetch joke</string>
    <string name="enter_your_mail_address">Enter your mail address</string>
    <string name="send_data">Send data</string>
    <string name="data_received_is">Data received is</string>
    <string name="post_api">Post Api</string>
    <string name="error_found_is">"Error found is : "</string>
    <string name="response_code">"Response Code : "</string>
    <string name="threads_and_foreground_service">Threads and Foreground Service</string>
    <string name="foreground_brief">In this fragment when the button is toggled foreground service and threads are started while the threads continue to run the sounds sequentially in background,A foreground notification is enabled until the user toggles the button to stop both background and foreground services.</string>
    <string name="api_methods">API Methods</string>
    <string name="other_api_methods">Other Api Methods</string>
    <string name="code">"Code: "</string>
    <string name="camera_desc">This is an example for the Camera. Click the button to start the camera. Dont forget to say cheese while taking the picture.</string>
    <string name="capture">Capture</string>
    <string name="apiLink">https://jsonplaceholder.typicode.com/</string>
    <string name="get_data">Get Data</string>
    <string name="post_data">Post Data</string>
    <string name="update_data">Update Data</string>
    <string name="delete_data">Delete Data</string>
    <string name="enter_id">Enter Id</string>
    <string name="enter_user_id">Enter UserId</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_body">Enter Body</string>
    <string name="submit">Submit</string>
    <string name="camera">Camera</string>
    <string name="my_map_api_key">AIzaSyAw8ut92DR7FW2KM85PYoIy08OxENI6aZM</string>
    <string name="view_map">View Map</string>
    <string name="get_directions">Get Directions</string>
    <string name="enter_start_location">Enter Start Location</string>
    <string name="enter_destination">Enter Destination</string>
    <string name="show_route">Show Route</string>
    <string name="scan_cancelled">Scan Cancelled</string>
    <string name="scan_prompt">Scan now</string>
    <string name="scan_result">Scan Result</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="qr_code_scanner">QR Code Scanner</string>
    <string name="scan_qr">Scan QR</string>
    <string name="call">Call</string>
    <string name="profile">Profile</string>
    <string name="contacts">Contacts</string>
    <string name="close">Close Menu</string>
    <string name="open">Open Side Menu</string>
    <string name="calls">Calls &amp; others</string>
    <string name="incoming_call">Incoming Call:</string>
    <string name="get_number">Get Number</string>
    <string name="number">Number</string>
    <string name="number_not_received">Number not received</string>
    <string name="incoming_number">Incoming Number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="get_otp">Get OTP</string>
    <string name="otp_explaination">In this activity, when a otp is sent , the broadcast automatically receives it and displays in the textview.</string>
    <string name="otp_implementation">OTP Implementation</string>
    <string name="app_logo">App Logo</string>
    <string name="take_a_photo">Take A Photo</string>
    <string name="record_a_video">Record A Video</string>
    <string name="hello_user">Hello User</string>
    <string name="choose_your_options">Choose your options</string>
    <string name="internal_storage_example">Internal Storage Example</string>
    <string name="firebase_notification">Notification from firebase</string>
    <string name="sec_act_explaination">This activity is an example of drawer menu and other implementations</string>
    <string name="notifications">Notifications</string>
    <string name="maps_link"><![CDATA[https://www.google.com/maps/dir/?api=1&origin=]]></string>
    <string name="maps_package">com.google.android.apps.maps</string>
    <string name="maps_download_link"><![CDATA[https://play.google.com/store/apps/details?id=com.google.android.apps.maps&hl=en&gl=US]]></string>
    <string name="edit_details">Edit Details</string>
    <string name="enter_role">Enter Role</string>
    <string name="check_me">A sample Check box. Check it</string>
    <string name="testing_activity">Testing Activity</string>
    <string name="unit_testing">Unit Testing</string>
    <string name="espresso_test">Espresso Test</string>
    <string name="test_page">Test Page</string>
    <string name="enter_a_url">Enter a URL</string>
    <string name="validate">Validate</string>
    <string name="unitTest_explanation">This is an example activity for performing unit testing, Run the UnitTestingTest file in the test area to check whether the functions used in this activity are executed perfectly</string>
    <string name="espresso_explanation">This is an example activity for Espresso Testing. Run the EspressoTest file in the androidTest package to check if the UI components listed here are working fine</string>
    <string name="room_db">Room DataBase Implementation</string>
    <string name="db_room">Room DB</string>
    <string name="data">Enter your Data</string>
    <string name="add_data">Add Data</string>
    <string name="data_from_database">Viewing Data from Database</string>
    <string name="no_data">No data available</string>
</resources>