<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/call"
            android:icon="@drawable/baseline_call_24"
            android:title="@string/call" />
        <item
            android:id="@+id/otp"
            android:icon="@drawable/broadcast"
            android:title="@string/get_otp" />
    </group>
    <item android:title="@string/profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/contacts"
                    android:icon="@drawable/ic_stat_name"
                    android:title="@string/notifications" />

                <item
                    android:id="@+id/about"
                    android:icon="@drawable/baseline_person_search_24"
                    android:title="@string/about_us" />
            </group>
        </menu>
    </item>

    <item android:title="@string/test_page">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/espressoTest"
                    android:title="@string/espresso_test" />

                <item
                    android:id="@+id/unitTest"
                    android:title="@string/unit_testing" />
            </group>
        </menu>
    </item>

    <item android:title="@string/db_room">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/roomData"
                    android:title="@string/room_db" />

            </group>
        </menu>
    </item>


</menu>
