<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".roomDB.UpdateUserFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_data"
        android:textSize="@dimen/_30sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/_20dp"
        android:textStyle="bold" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:id="@+id/editTextUserId"
            android:layout_marginTop="@dimen/_50dp"
            android:hint="@string/enter_user_id"
            android:textColorHint="@color/black"
            android:inputType="number"
            android:textColor="@color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:id="@+id/usernameEditText"
            android:layout_marginTop="@dimen/_150dp"
            android:hint="@string/enter_username"
            android:textColorHint="@color/black"
            android:inputType="textPersonName"
            android:textColor="@color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:id="@+id/editTextMail"
            android:layout_marginTop="@dimen/_250dp"
            android:hint="@string/enter_your_mail_address"
            android:textColorHint="@color/black"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_400dp"
            android:text="@string/go_back"
            android:id="@+id/backButton"
            android:layout_gravity="end"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_400dp"
            android:text="@string/submit"
            android:id="@+id/btnSubmit"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_400dp"
            android:text="@string/clear"
            android:id="@+id/btnClear"
            android:layout_gravity="start"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sp"/>


    </FrameLayout>
</ScrollView>