<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgcolor6"
    tools:context=".activity.EspressoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/testing_activity"
        android:textColor="@color/black"
        android:textSize="@dimen/_30sp" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_50dp"
        android:text="@string/espresso_explanation"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sp"
        android:padding="@dimen/_10dp"/>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/text2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_50dp"
        android:autofillHints="no"
        android:hint="@string/enter_username"
        android:inputType="textMultiLine"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="@dimen/_14sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_50dp"
        android:backgroundTint="@color/white"
        android:text="@string/clear"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="@dimen/_50dp"
        android:backgroundTint="@color/white"
        android:text="@string/submit"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sp" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText1"
            android:layout_marginTop="@dimen/_50dp"
            android:backgroundTint="@color/white"
            android:text="@string/go_back"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sp"
            android:layout_alignParentEnd="true"/>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="@dimen/_100dp"
        android:layout_height="@dimen/_150dp"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_30dp"
        android:src="@drawable/android_icon"
        android:contentDescription="@string/image"/>

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="@dimen/_250dp"
        android:layout_height="@dimen/_100dp"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/check_me"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sp"/>

    </RelativeLayout>

</ScrollView>