<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".roomDB.DeleteUserFragment">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20dp"
            android:text="@string/delete_data"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="@dimen/_30sp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_marginTop="@dimen/_50dp"
            android:autofillHints="none"
            android:hint="@string/enter_user_id"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/_14sp"/>

        <ImageView
            android:layout_width="@dimen/_200dp"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_gravity="center"
            android:src="@drawable/bg_image2"
            android:contentDescription="@string/image"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_400dp"
            android:text="@string/go_back"
            android:id="@+id/backButton"
            android:layout_gravity="end"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_400dp"
            android:text="@string/submit"
            android:id="@+id/btnSubmit"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_400dp"
            android:text="@string/clear"
            android:id="@+id/btnClear"
            android:layout_gravity="start"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sp"/>

    </FrameLayout>
</ScrollView>