<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_16dp"
            android:columnCount="2"
            android:rowCount="2"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:rowOrderPreserved="false">

            <Button
                android:id="@+id/btnGetData"
                android:layout_width="@dimen/_0dp"
                android:layout_height="@dimen/_50dp"
                android:layout_columnWeight="1"
                android:layout_marginEnd="@dimen/_15dp"
                android:backgroundTint="@color/buttonbg"
                android:text="@string/get_data"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnPostData"
                android:layout_width="@dimen/_0dp"
                android:layout_height="@dimen/_50dp"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/buttonbg"
                android:text="@string/post_data"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnUpdateData"
                android:layout_width="@dimen/_0dp"
                android:layout_height="@dimen/_50dp"
                android:layout_columnWeight="1"
                android:layout_marginTop="@dimen/_15dp"
                android:layout_marginEnd="@dimen/_15dp"
                android:backgroundTint="@color/buttonbg"
                android:text="@string/update_data"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnDeleteData"
                android:layout_width="@dimen/_0dp"
                android:layout_height="@dimen/_50dp"
                android:layout_columnWeight="1"
                android:layout_marginTop="@dimen/_15dp"
                android:backgroundTint="@color/buttonbg"
                android:text="@string/delete_data"
                android:textColor="@color/black" />
        </GridLayout>

        <TextView
            android:id="@+id/textResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sp"
            android:textStyle="bold"
            android:padding="@dimen/_16dp"
            android:layout_marginTop="@dimen/_90dp"
            tools:text="Result Text" />

        <EditText
            android:id="@+id/editTextId"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_marginTop="@dimen/_16dp"
            android:hint="@string/enter_id"
            android:importantForAutofill="no"
            android:inputType="number"
            android:visibility="gone" />


        <EditText
            android:id="@+id/editTextUserId"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_marginTop="@dimen/_16dp"
            android:hint="@string/enter_user_id"
            android:importantForAutofill="no"
            android:inputType="number"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edittextTitle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_marginTop="@dimen/_16dp"
            android:hint="@string/enter_title"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:visibility="gone" />

        <EditText
            android:id="@+id/editTextBody"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_marginTop="@dimen/_16dp"
            android:hint="@string/enter_body"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:visibility="gone" />

        <Button
            android:layout_width="@dimen/_100dp"
            android:layout_height="@dimen/_50dp"
            android:text="@string/submit"
            android:visibility="gone"
            android:backgroundTint="@color/buttonbg"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_16dp"
            android:textSize="@dimen/_14sp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/btnSubmit"/>
    </LinearLayout>
</ScrollView>
