<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".api.ApiActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/scanQR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_qr" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/threads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/threads" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/put"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/api_methods" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tab_layout"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
