<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgcolor6"
    android:padding="@dimen/_20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/inputUsername"
            android:layout_width="@dimen/_170dp"
            android:layout_height="@dimen/_50dp"
            android:hint="@string/enter_username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/_14sp" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="@dimen/_170dp"
            android:layout_height="@dimen/_50dp"
            android:autofillHints="no"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/_14sp" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="@dimen/_170dp"
            android:layout_height="@dimen/_50dp"
            android:autofillHints="no"
            android:hint="@string/enter_your_mail_address"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/_14sp" />

        <EditText
            android:id="@+id/inputPhone"
            android:layout_width="@dimen/_170dp"
            android:layout_height="@dimen/_50dp"
            android:autofillHints="no"
            android:hint="@string/enter_mobile_no"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/_14sp" />

        <EditText
            android:id="@+id/inputRole"
            android:layout_width="@dimen/_170dp"
            android:layout_height="@dimen/_50dp"
            android:autofillHints="no"
            android:hint="@string/enter_role"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/_14sp" />
    </LinearLayout>

</ScrollView>
