<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/ashGreen">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50dp"
        android:text="@string/qr_code_scanner"
        android:gravity="center"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:fontFamily="serif"
        android:layout_marginBottom="@dimen/_50dp"
        android:layout_marginTop="@dimen/_50dp"
        android:textSize="@dimen/_30sp"
        android:textColor="@color/orange"/>


    <Button
        android:id="@+id/btnScan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_qr_code" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_result"
        android:layout_marginTop="16dp" />

</LinearLayout>